--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,7 @@ button:hover {
     height: 80px;
 }
 #header-user {
+    max-width: 535px;
     float: right;
 }
 table#login tbody tr th {
@@ -147,16 +148,18 @@ label {
 }
 /* Field tree */
 #field-list {
+    min-height: 300px;
     padding: 0 20px;
     border: 1px solid grey;
 }
-.field-option {
-    right: 0px;
+#field-list-name {
+    margin-right: 10px;
 }
-#field-list1 {
-    margin-top: -17px;
-    margin-right: 60px;
-    border: 2px solid black;
+#field-search {
+    float: right;
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding-left: 3px;
 }
 /* Pop up Form */
 .modal {
@@ -172,6 +175,7 @@ label {
 }
 /*  */
 .modal-content {
+    min-width: 400px;
     background-color: #fefefe;
     margin: 4% auto 15% auto;
     border: 1px solid #888;
@@ -241,8 +245,7 @@ thead tr {
 }
 .tab-wrapper ul.tab li {
     display: inline-block;
-    border: solid;
-    border-width: 2px;
+    border: 2px solid;
     margin: 0 10px 0 0;
 }
 .tab-wrapper ul li.active{
@@ -255,14 +258,17 @@ thead tr {
     color: #000;
     padding: 0 10px;
 }
-ul[class="hoho"] li a {
+/* ul[class="hoho"] li a {
     margin-left: 80px;
 }
 .tab-wrapper ul.hoho li{
     margin-left: -80px;
-}
+} */
 .tab-item {
     display: none;
     margin: 0;
+}
+.list {
+    border: 2px solid;
 }
   
