--- a/views/field_research.ejs
+++ b/views/field_research.ejs
@@ -41,7 +41,6 @@
         <% include partials/foot.ejs %>
         <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
         <script type="text/javascript" src="/dist/jstree.min.js"></script>
-        <script type="text/javascript" src="/js/tree.js"></script>
-        <!--<script type="text/javascript" src="/js/tree.js"></script>-->
+        <script type="text/javascript" src="/js/tree.js"></script>\
     </body>
 </html>
