--- a/views/search-unit.ejs
+++ b/views/search-unit.ejs
@@ -51,7 +51,7 @@
                 <th>Họ và tên</th>
                 <th>Học vị</th>
                 <th>Đơn vị công tác</th>
-
+                <th></th>
               </tr>
             </thead>
             <tbody id="myTable">
@@ -74,6 +74,8 @@
 
         <div id="menu2" class="tab-item">
           <div class="list">
+            <input type="text" placeholder="Tìm kiếm lĩnh vực" id="field-search" name="search">
+            <br>
             <div id="jstree"></div>
           </div>
           <table id="table-unit" class="table table-bordered">
@@ -83,6 +85,7 @@
                 <th>Họ và tên</th>
                 <th>Học vị</th>
                 <th>Đơn vị công tác</th>
+                <th></th>
               </tr>
             </thead>
             <tbody id="myTable">
@@ -157,7 +160,7 @@
   <script type="text/javascript" src="/js/myjs.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="/dist/jstree.min.js"></script>
-  <script type="text/javascript" src="/js/tree.js"></script>
+  <script type="text/javascript" src="/js/tree-guest.js"></script>
 </body>
 
 </html>
