--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,7 +70,7 @@
                 <div class="container clear-fix">
                     <div id="main-content">
                         <br>
-                        <div>
+                        <div id="banner">
                             <h1 id="slogan">TRANG THÔNG TIN GIẢNG VIÊN</h1>
                         </div>
                         <br>
