--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,3 +1,3 @@
 <footer id="header">
-    <div style="text-align: center;"><i class="far fa-copyright"></i> 2019 @u-Faculties</div>
+    <div style="text-align: center;"><i class="far fa-copyright"></i> 2019 @u-Faculties HHD TEAM</div>
 </footer>
