--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -9,7 +9,7 @@
     <body>
         <div id="surface">
             <% include partials/head.ejs %>
-            <div class="container">
+            <div class="container" style="min-height: 525px;">
                 <br>
                 <div>
                     <span style="display: inline-block;">
